# agentic-eval-ops-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
blueprints/: hermes_eval_skill.md  n8n_agent_eval_router.json  openclaw_SOUL.md  vapi_assistant_quality_gate.json
docs/: ARCHITECTURE.md  PROFILE_SIGNAL.md  ROADMAP.md  RUBRIC_GUIDE.md
examples/: hermes_skill_trace.json  openclaw_trace.json  redteam_suite.json  vapi_voice_call.json  video_training_task.json
skills/codex-agentic-eval/: SKILL.md
src/agentic_eval_ops/: __init__.py  cli.py  evaluator.py  io.py  models.py  report.py  text.py
tests/: test_evaluator.py  test_io_and_cli.py
