[project]
name = "agentic-eval-ops-kit"
version = "0.1.0"
description = "Voice-agent, tool-agent, video-workflow, and red-team evaluation toolkit."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kartik Mishra" }]
keywords = [
  "ai-evaluation",
  "voice-agents",
  "vapi",
  "openclaw",
  "hermes-agent",
  "ai-red-teaming",
  "video-workflow",
  "tool-use",
]

[project.scripts]
agentic-eval = "agentic_eval_ops.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
